--- a/src/initializer/index.less
+++ b/src/initializer/index.less
@@ -56,6 +56,12 @@
 
   p {
     min-height: .3em;
+    margin-bottom: 1rem;
+  }
+
+  img{
+    max-width: 90%;
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,.1);
   }
 }
 
