--- a/src/pages/question/index.less
+++ b/src/pages/question/index.less
@@ -20,7 +20,7 @@
     }
 
     .content {
-      padding: 48px 0 32px 0;
+      padding: 16px 0;
     }
 
     .mc-topics-bar {
@@ -37,7 +37,7 @@
   }
 
   .mc-list-header {
-    margin-top: 32px;
+    margin-top: 20px;
     margin-bottom: 20px;
   }
 
@@ -95,7 +95,7 @@
     }
 
     .mc-list-header {
-      margin-top: 20px;
+      margin-top: 12px;
       margin-bottom: 12px;
       padding: 0 16px;
 
