--- a/src/components/drawer/index.less
+++ b/src/components/drawer/index.less
@@ -3,6 +3,7 @@
 .mc-drawer {
   display: flex;
   flex-direction: column;
+  border-right: 1px solid #dadce0;
 
   .mdui-list {
     flex: 1;
@@ -12,6 +13,7 @@
   .mdui-list-item {
     padding-left: 20px;
     border-radius: 0 50px 50px 0;
+    margin-right: 24px;
   }
 
   .mdui-list-item-icon {
@@ -38,6 +40,13 @@
       .mdui-theme-layout-dark & {
         color: #fff;
       }
+    }
+    &::after{
+      visibility: visible;
+      background-color: #1967d2;
+      left: 0;
+      width: 6px;
+      position: absolute;
     }
   }
 
