--- a/src/components/list-item/index.less
+++ b/src/components/list-item/index.less
@@ -1,4 +1,4 @@
-@import "../../vendor/mdui/variable.less";
+@import '../../vendor/mdui/variable.less';
 
 .mc-list-item {
   position: relative;
@@ -7,7 +7,7 @@
   text-decoration: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
   cursor: pointer;
-  transition: background-color .18s cubic-bezier(.4,0,.2,1);
+  transition: background-color 0.18s cubic-bezier(0.4, 0, 0.2, 1);
 
   .mdui-theme-layout-dark & {
     border-bottom-color: rgba(255, 255, 255, 0.12);
@@ -43,25 +43,7 @@
     content: ' ';
 
     .mdui-theme-layout-dark & {
-      background-color: rgba(255, 255, 255, .7);
-    }
-  }
-
-  .mc-user-popover {
-    position: absolute;
-    left: 26px;
-    width: 20px;
-    height: 20px;
-
-    &>.avatar {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 20px 20px;
-      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.7);
     }
   }
 
@@ -95,30 +77,104 @@
 
   .meta {
     display: flex;
-    padding-left: 48px;
+    padding-left: 4px;
     font-size: 13px;
-  }
-
-  .update_time {
-    display: none;
   }
 
   .replys {
     margin-left: 16px;
   }
 
+  .topics {
+    margin: 0 16px;
+    max-width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    transition: max-width 0.2s ease-in-out, -webkit-mask-image 0.2s;
+    -webkit-mask-image: linear-gradient(
+      to right,
+      #000 140px,
+      rgba(0, 0, 0, 0) 150px
+    );
+
+    &:hover {
+      max-width: 400px;
+      -webkit-mask-image: none;
+    }
+
+    .mdui-btn {
+      height: 16px;
+      line-height: 16px;
+      padding: 0 4px;
+      min-width: 0;
+      font-size: 85%;
+      color: #fff;
+      border-radius: 0;
+      font-weight: 600;
+
+      &:nth-child(1n){
+        background-color: rgb(55, 192, 255);
+      }
+      &:nth-child(2n){
+        background-color: rgb(147, 84, 202);
+      }
+      &:nth-child(3n){
+        background-color: rgb(109, 187, 62);
+      }
+      &:nth-child(4n){
+        background-color: rgb(0, 77, 211);
+      }
+
+      &:first-child:last-child {
+        border-radius: 4px;
+      }
+
+      &:first-child {
+        border-radius: 4px 0 0 4px;
+      }
+
+      &:last-child {
+        border-radius: 0 4px 4px 0;
+      }
+    }
+  }
+
   &:hover {
     .meta {
       padding-left: 12px;
     }
+  }
 
-    .update_time {
-      display: block;
+  .mc-user-popover {
+    position: absolute;
+    left: 16px;
+    width: 36px;
+    height: 36px;
+
+    & > .avatar {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 36px 36px;
+      border-radius: 50%;
     }
   }
 
   @media (max-width: @screen-xs-max) {
     padding-left: 50px;
+
+    .mc-user-popover {
+      left: 26px;
+      width: 20px;
+      height: 20px;
+  
+      & > .avatar {
+        background-size: 20px 20px;
+      }
+    }
 
     .mc-user-popover {
       left: 16px;
@@ -131,14 +187,17 @@
     .meta {
       flex-direction: row-reverse;
       padding-left: 0 !important;
-    }
 
-    .update_time {
-      display: block;
+      .topics{
+        max-width: unset;
+        margin: 0 4px;
+        -webkit-mask-image: none;
+      }
+
     }
 
     .replys {
-      margin-right: 16px;
+      margin-right: 4px;
       margin-left: 0;
     }
   }
